--- a/config/typescript-config/package.json
+++ b/config/typescript-config/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@saas/tsconfig",
+  "name": "@saas/ts-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
+  "files": ["library.json.", "node.json"],
   "publishConfig": {
     "access": "public"
   }
