--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@prisma/client": "5.19.1",
     "@saas/auth": "workspace:*",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
@@ -16,6 +17,7 @@
     "@saas/prettier": "workspace:*",
     "@saas/ts-config": "workspace:*",
     "@types/node": "^20.14.9",
+    "prisma": "^5.19.1",
     "tsx": "^4.16.0"
   },
   "prettier": "@saas/prettier",
