--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,18 +4,25 @@
   "scripts": {
     "dev": "tsx watch src/http/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^9.5.1",
     "@prisma/client": "5.19.1",
     "@saas/auth": "workspace:*",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@saas/eslint-config": "workspace:*",
     "@saas/prettier": "workspace:*",
     "@saas/ts-config": "workspace:*",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.9",
     "prisma": "^5.19.1",
     "tsx": "^4.16.0"
