--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,14 +8,15 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
+    "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "5.19.1",
     "@saas/auth": "workspace:*",
     "bcryptjs": "^2.4.3",
-    "fastify": "^4.28.1",
-    "fastify-type-provider-zod": "^2.0.0",
-    "zod": "^3.23.8"
+    "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^5.0.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
