--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@saas/auth": "workspace:*",
     "bcryptjs": "^2.4.3",
     "fastify": "^5.4.0",
+    "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^5.0.1",
     "zod": "^3.25.67"
   },
