--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,10 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "pnpm env:load tsx watch src/http/server.ts",
+    "db:migrate": "pnpm env:load prisma migrate dev",
+    "db:studio": "pnpm env:load prisma studio",
+    "env:load": "dotenv -e ../../.env --"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -14,6 +17,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "5.19.1",
     "@saas/auth": "workspace:*",
+    "@saas/env": "workspace:*",
     "bcryptjs": "^2.4.3",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
@@ -27,6 +31,7 @@
     "@saas/ts-config": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.9",
+    "dotenv-cli": "^8.0.0",
     "prisma": "^5.19.1",
     "tsx": "^4.16.0"
   },
