--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,10 +14,10 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
     "@fastify/swagger": "^9.5.1",
-    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "5.19.1",
     "@saas/auth": "workspace:*",
     "@saas/env": "workspace:*",
+    "@scalar/fastify-api-reference": "^1.34.2",
     "bcryptjs": "^2.4.3",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
